2010-06-13  Dale Mellor <dale_mellor@users.sourceforge.net>

	* configure.ac: added --enable-no-vixie-clobber argument to
	configure so that the root user can avoid overwriting a legacy
	cron installation.

	* mcron.1: added simple, minimal man page using help2man (the
	texinfo file is still the primary documentation source).

	* makefile.am: replaced use of mkinstalldirs with install; the
	former is not supplied with the latest automake (1.11).


2008-02-21  Dale Mellor <dale_mellor@users.sourceforge.net>

	* ALL FILES: Replaced version 2 GPL notices with version 3 ones.

	* makefile.am: Do not remove COPYING file with make
	maintainer-clean; if you do it will eventually get replaced with
	the old version 2 GPL by a subsequent automake.

	* configure.ac: Bumped version to 1.0.4.


2008-01-25  Dale Mellor <dale_mellor@users.sourceforge.net>

	* main.scm (command-type): Files which are listed on the command
	line are assumed to be guile configurations if they do not end in
	.guile or .vixie (previously they were silently ignored).

	* main.scm: Argument to --schedule is no longer optional (the
	options system goes really screwy with optional values, usually
	pulling the first non-option argument as a value if one was not
	intended!)

	* makefile.am: Moved target-specific CFLAGS and LDFLAGS to global
	AM_* variables, to remove problem with automake requiring
	AM_PROGS_CC_C_O in configure.ac (!)

	* Version is currently at 1.0.3.


2005-09-02  Dale Mellor <dale_mellor@users.sourceforge.net>

	* makefile.am, mcron.c.template (main): Modified install-exec-hook
	so that a proper installation of a Vixie-compatible cron only
	takes place if we are root - otherwise only mcron is installed as
	a user-owned program.  The guile modules are now installed under
	mcron's shared data directory, not guile's global directories.

	* mcron-core.scm: Removed job:advance-time, put the code inline
	where it was called, and changed the instance in the main loop to