@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.37.1.
-.TH MCRON "1" "June 2010" "mcron " "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
+.TH MCRON "1" "February 2012" "mcron " "User Commands"
 .SH NAME
 mcron \- a program to run tasks at regular (or not) intervals
 .SH SYNOPSIS
@@ -7,8 +7,8 @@ mcron \- a program to run tasks at regular (or not) intervals
 [\fIOPTIONS\fR] [\fIFILES\fR]
 .SH DESCRIPTION
 Run an mcron process according to the specifications in the FILES (`\-' for
-standard input), or use all the files in ~/.cron with .guile or .vixie
-extensions.
+standard input), or use all the files in ~/.config/cron (or the
+deprecated ~/.cron) with .guile or .vixie extensions.
 .TP
 \fB\-v\fR, \fB\-\-version\fR
 Display version
@@ -20,8 +20,8 @@ Display this help message
 Display the next N jobs that will be run by mcron
 .TP
 \fB\-d\fR, \fB\-\-daemon\fR
-Immediately detach the program from the terminal and
-run as a daemon process
+Immediately detach the program from the terminal
+and run as a daemon process
 .TP
 \fB\-i\fR, \fB\-\-stdin=\fR(guile|vixie) Format of data passed as standard input or
 file arguments (default guile)
@@ -30,7 +30,7 @@ Written by Dale Mellor
 .SH "REPORTING BUGS"
 Report bugs to dale_mellor@users.sourceforge.net.
 .PP
-mcron  (mcron 1.0.6)
+mcron  (mcron 1.0.7)
 .SH COPYRIGHT
 Copyright \(co 2003, 2006  Dale Mellor
 .br
